Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment_echo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
