ReplicatSet.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo_service_replica_set
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
