Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: echo.ingress.wik.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo_ingress_service
                port:
                  number: 8080
